added new block for home page

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -370,6 +370,11 @@
           "hero_title": "Everyday Luxury Essentials"
         }
       },
+      "new-home-page-shop-styled-chloe": {
+        "type": "new-home-page-shop-styled-chloe",
+        "settings": {
+        }
+      },
       "new-home-page-girls-section": {
         "type": "new-home-page-girls-section",
         "settings": {
@@ -4411,6 +4416,7 @@
       "new-home-page-shop-look",
       "new-home-page-shop-loungewear",
       "new-home-page-shop-styles-slider",
+      "new-home-page-shop-styled-chloe",
       "new-home-page-girls-section",
       "new-home-page-shop-reviews-slider",
       "new-home-page-shop-about-product",
